Rename service object to MoveTaskOrderUpdater and add test
